# CACourses

./: .gitignore  README.md  agreements.ipynb  agreements_to_db.py  alpine-component.js  download_data.py  download_data2.py  index-alpine.html  index.html  index3.html  krill.txt  requirements.txt  style.css  tbd.md  test.ipynb  testquery.py  transform-assist-data.ipynb
articulation-function/: lambda_function.py
backend/: deploy-lambdas.sh  pyproject.toml
backend/get_articulations/: lambda_function.py
backend/get_courses/: lambda_function.py
backend/notebook/: test-articulation-lambda.ipynb  test-courses-lambda.ipynb
courses-function/: lambda_function.py
data/: courses.db
etl-pipeline/: _agreements_to_db.py  agreements.ipynb  dnf-converter.py  rewrite-loader.ipynb  schema_prefix.pickle  test.ipynb
etl-pipeline/utils/: generate_schema.py
etl_pipeline/: .env.template  README.md  _agreements_to_db.py  agreements_to_db.py  pyproject.toml  rewrite-loader.ipynb  test.ipynb
etl_pipeline/notebooks/: articulation_to_db.ipynb  glossary_to_db.ipynb  transform-assist-data.ipynb
etl_pipeline/schemas/: schema_major.pickle
etl_pipeline/scripts/: agreements_to_db.py  glossary_to_db.py
etl_pipeline/src/: agreements_to_db.py  glossary_to_db.py
etl_pipeline/utils/: __init__.py  benchmarking.py  dnf_converter.py  env.py  generate_articulations.py  generate_glossary.py  generate_schema.py  glossary.py  paths.py  to_postgres.py
frontend/: alpine-component.js  index.html  utils.js
lambda_functions/: get_articulations_lambda.py  get_courses_lambda.py
(+6 files in other folders)
