[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
]
